--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Mike's pages</title>
-<p>Hello world</p>
+<h1>Mike's pages</h1>
+<p>Here's a list of some front-end projects that I've created in my efforts to learn web development.
+<ul>
+  <li><a rel="./nft preview card component challenge/index.html">NFT Preview Card</a>
+</ul>
