--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@
 <h1>Mike's pages</h1>
 <p>Here's a list of some front-end projects that I've created in my efforts to learn web development.
 <ul>
-  <li><a rel="./nft preview card component challenge/index.html">NFT Preview Card</a>
+  <li><a rel="./nft-preview-card-challenge/index.html">NFT Preview Card</a>
 </ul>
