--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@
 <h1>Mike's pages</h1>
 <p>Here's a list of some front-end projects that I've created in my efforts to learn web development.
 <ul>
-  <li><a href="./nft-preview-card-challenge/index.html">NFT Preview Card</a>
+  <a href="./nft-preview-card-challenge/index.html"><li>NFT Preview Card</li></a>
 </ul>
