--- a/nft-preview-card-challenge/nft.html
+++ b/nft-preview-card-challenge/nft.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="nft.css">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 <link rel="icon" sizes="32x32" href="./images/favicon-32x32.png">
