--- a/nft-preview-card-challenge/nft.html
+++ b/nft-preview-card-challenge/nft.html
@@ -36,6 +36,6 @@
   </div>
   <div id="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/maccartm">Michael MacCarthy</a>.
+    Coded by <a href="https://maccartm.github.io">Michael MacCarthy</a>.
   </div>
 </div>
