--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@
 <p>Here's a list of some front-end projects that I've created in my efforts to learn web development.
 <ul>
   <li><a href="./nft-preview-card-challenge/nft.html">NFT Preview Card</a></li>
+  <li><a href="./order-summary-component/summary.html">Order Summary Component</a></li>
 </ul>
