--- a/order-summary-component/summary.html
+++ b/order-summary-component/summary.html
@@ -28,6 +28,6 @@
   </main>
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="http://maccartm.github.io">Michael</a>.
+    Coded by <a href="http://maccartm.github.io">Michael MacCarthy</a>.
   </footer>
 </article>
