--- a/index.html
+++ b/index.html
@@ -6,4 +6,5 @@
 <ul>
   <li><a href="./nft-preview-card-challenge/nft.html">NFT Preview Card</a></li>
   <li><a href="./order-summary-component/summary.html">Order Summary Component</a></li>
+  <li><a href="./3-column-preview-card/vehicles.html">3-Column Vehicle Preview</a></li>
 </ul>
